# telemanipulation

./: README.md
catmux/: control_cartsian_ROS1_2.yaml  control_pivot_ROS1_2.yaml  pivot_control_ROS1.yaml
ws_ROS1/devel/: .catkin  setup.sh
ws_ROS1/devel/lib/hera_control/: follow_trajectory_interface_node  robot_state_initializer_node
ws_ROS1/devel/lib/panda_controller/: follow_trajectory_interface  trajectory_pub_test
ws_ROS1/devel/lib/pkgconfig/: hera_control.pc  hera_description.pc  hera_moveit_config.pc  panda_controller.pc
ws_ROS1/devel/share/hera_control/cmake/: hera_controlConfig.cmake
ws_ROS1/devel/share/hera_description/cmake/: hera_descriptionConfig.cmake
ws_ROS1/devel/share/hera_moveit_config/cmake/: hera_moveit_configConfig.cmake
ws_ROS1/devel/share/panda_controller/cmake/: panda_controllerConfig.cmake
ws_ROS1/src/hera_control/: CMakeLists.txt  package.xml
ws_ROS1/src/hera_control/config/: hera_control.yaml
ws_ROS1/src/hera_control/launch/: hera_control.launch  hera_control_2.launch
ws_ROS1/src/hera_control/src/: follow_trajectory_interface.cpp  robot_state_initializer_node.cpp
ws_ROS1/src/hera_description/: CMakeLists.txt  HOWTO new robot_description.md  README.md
ws_ROS1/src/hera_description/common/: test_description.rviz
ws_ROS1/src/hera_description/config/: kinematics.yaml  panda_limits.yaml  panda_zeros.yaml
ws_ROS1/src/hera_description/launch/: hera_description_2.launch  hera_description_upload.launch
ws_ROS1/src/hera_description/meshes/eyeboard/collision/: eyeboard_convex.stl
ws_ROS1/src/hera_description/meshes/icra_meshes/: expert.dae
ws_ROS1/src/hera_description/meshes/lab/: lab_floor.dae
ws_ROS1/src/hera_description/meshes/lap_box/collision/: lap_box_convex.stl  lap_box_short_convex.stl  lap_box_shorter_convex.stl
ws_ROS1/src/hera_description/meshes/lap_box/visual/: lap_box_short.dae  lap_box_short_colorized.dae  lap_box_shorter.dae
ws_ROS1/src/hera_description/urdf/: hera_main.urdf.xacro  hera_operating_theatre.xacro
ws_ROS1/src/hera_description/urdf/laparoscope/: laparoscope.gazebo.xacro  laparoscope.transmission.xacro
ws_ROS1/src/hera_description/urdf/panda/: panda.srdf
ws_ROS1/src/hera_description/urdf/panda_tools/: panda_tool.xacro
ws_ROS1/src/hera_description/urdf/pig_phantom/: pig_phantom.gazebo.xacro  pig_phantom.xacro
ws_ROS1/src/hera_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws_ROS1/src/hera_moveit_config/config/: EffortJointInterface_controllers.yaml  fake_controllers.yaml  hera_operating_theatre.srdf.xacro  kinematics.yaml  ompl_planning.yaml  sensors_3d.yaml
ws_ROS1/src/hera_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  fake_state.launch  hera_operating_theatre_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
ws_ROS1/src/panda_controller/: CMakeLists.txt  package.xml
ws_ROS1/src/panda_controller/config/: panda_controller.yaml
ws_ROS1/src/panda_controller/etc/: catmux_session.yaml
ws_ROS1/src/panda_controller/lauch/: panda_gazebo.launch  ros_controller.launch  trajectory_interface_test.launch
ws_ROS1/src/panda_controller/src/: follow_trajectory_interface.cpp  trajectory_pub_test.cpp
ws_ROS2/: .project
ws_ROS2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_ROS2/install/panda_description/share/panda_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws_ROS2/install/pivot_msg/share/pivot_msg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_ROS2/install/telemanipulator/share/telemanipulator/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws_ROS2/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_ROS2/log/: latest_build
ws_ROS2/src/panda_description/: CMakeLists.txt
ws_ROS2/src/panda_description/urdf/: panda_change_limits.urdf
ws_ROS2/src/panda_description/urdf2/: hera.gazebo.xacro  hera_operating_theatre.xacro  hera_virtual.xacro
ws_ROS2/src/panda_description/urdf2/laparoscope/: laparoscope.xacro
ws_ROS2/src/panda_description/urdf2/open_help_phantom/: open_help_phantom.gazebo.xacro
ws_ROS2/src/panda_description/urdf2/or_table/: or_table.gazebo.xacro  or_table.xacro
ws_ROS2/src/panda_description/urdf2/panda/: panda.xacro
ws_ROS2/src/pivot_msg/: CMakeLists.txt
ws_ROS2/src/telemanipulator/: CMakeLists.txt
ws_ROS2/src/telemanipulator/config/: panda_simulated_config2.yaml  panda_simulated_config_2.yaml
ws_ROS2/src/telemanipulator/include/: homogeneous_matrix.h  pivot_transformation.h
ws_ROS2/src/telemanipulator/launch/: control_3.launch.py  control_ros2.launch.py  controll_loop.launch.py
ws_ROS2/src/telemanipulator/src/: homogeneous_matrix.cpp  key_to_servo.cpp  keyboard_as_pivot_input.cpp  pivot_to_twiststamped.cpp  pivot_transformation.cpp
(+104 files in other folders)
