<?xml version="1.0"?>
<package>
  <name>hera_control</name>
  <version>0.0.1</version>
  <description>Hera Lab ros_control integration</description>

  <maintainer email="paul.scheikl@kit.edu">Paul Scheikl</maintainer>

  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>controller_manager</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager_msgs</run_depend>


</package>

