<?xml version="1.0"?>
<package>

  <name>hera_moveit_config</name>
  <version>0.3.0</version>
  <description>
    Hera Lab integration into the MoveIt! Motion Planning Framework
  </description>
  <author email="paul.scheikl@kit.edu">Paul Maria Scheikl</author>
  <maintainer email="paul.scheikl@kit.edu">Paul Maria Scheikl</maintainer>

  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>

  <run_depend>hera_description</run_depend>
  <run_depend>hera_gazebo</run_depend>
  <run_depend>hera_control</run_depend>
  <run_depend>rviz</run_depend>

</package>
